   * libiconv linking fix for PTP2 driver.
   * Require external libltdl.
   * Ditched autogen.sh, use standard autoreconf from stock autoconf.

Bindings:
   * Preliminary work on Python bindings.

Package / System integration:
   * Add README.packaging file for packagers.
   * Removed obsolete print-usb-usermap. Use
     "print-camera-list usb-usermap usbcam" instead.
   * Add new permission setup script doing class based matching for
     PTP class cameras not listed explicitly by USB IDs.
     This script (check-ptp-camera) is used by the generated UDEV rules.
   * Add new permission setup binary doing Microsoft OS Descriptor
     retrieval for MTP devices not explicitly listed.
     This binary (check-mtp-device) is used by the generated UDEV rules.

PTP:
   * Fixed a memory leak in continuous Nikon / Canon capture mode.

------------------------------------------------------------------------

libgphoto2 2.3.0

PTP:
   * Improved Nikon remote control
   * Improved Canon file download
	- faster directory retrieval (especially on cameras with lots of files)
	- "new" images are marked (gphoto2 --new, digikam)
   * MTP Playlist support (upload and download)
   * MTP Metadata support (upload and download, Artist, Title, Playtime ... )
   * Lots of other MTP related fixes.
   * MTP autodetection on Microsoft OS Descriptor.
   * New devices:
          Canon PowerShot A540, A530, S3 IS, SD430, SD700, IXUS 800,
		IXUS 60, A630, SD630, G7, Digital IXUS 65, 710IS, EOS 400D,
		Digital Rebel XTi, IXUS 850 IS, PowerShot A640,
		IXUS Wireless (USB support only currently)
          iRiver T20 FM, iClix
	  Creative Zen Vision W, Vision M, Vplus, V
          Dell Pocket DJ
          Nikon Coolpix L4, L3, L1, D80, P3
          Kodak Easyshare Z740, P850, Z612, C633, C643, C530, Z612, CD33
          Sony DSC-U10
          Leica D-LUX 2
	  Olympus IR-300
          JVC Alneo XA-HD500
	  All currently known HP Photosmarts (sync with Windows Driver .INF files)